[v17] Test, apigateway, corrigidos